--- a/config.json
+++ b/config.json
@@ -1,6 +1,8 @@
 {
     "params": {
       "site_id": "",
-      "show_hits" : false
+      "show_hits" : false,
+      "show_kudos" : false,
+      "kudos_label" : ""
     }
   }
